1.1.0 [2018-04-12]
[*] Implement Domain commands, handlers, queries and repositories
[+] Create ThreeTrees.Tools.Messages.Abstractions project
[*] Update EmployeeController. Use queries and commands instead of DbContext

1.0.7 [2018-04-11]
[*] Resolve stylecop warnings
[+] Create employee screens
[+] Create statistic screens
[+] Create Domain commands, handlers and queries

1.0.5 [2018-04-10]
[+] Add Tools projects
[*] Update appsettings for Web project
[*] Update README.md

1.0.3 [2018-04-09]
[+] Update docs: Add FinalTask.md and ProjectStructure.html
[+] Add domain models: Add Employee and EmployeeStatistic
[+] Create infrastructure and data access layer

1.0.1 [2018-04-07]
[*] Rename projects
[*] Update rules in stylecop.json

1.0.0 [2018-04-05]
[+] Create basic projects
[+] Add following deps: Autofac, NLog, StyleCop.Analyzers, EntityFramework Core