@@ -5,7 +5,7 @@
 <div class="jumbotron">
     <h1>@ViewBag.Title</h1>
     <p class="lead">AleksanderL - Project Base Structure</p>
-    <p><a href="https://saritasa.atlassian.net/browse/SN-3/asp.net" class="btn btn-primary btn-lg">#SN-3 &raquo;</a></p>
+    <p><a href="https://saritasa.atlassian.net/browse/SN-3" class="btn btn-primary btn-lg">#SN-3 &raquo;</a></p>
 </div>
 
 <div class="row">
