@@ -1,6 +1,7 @@
 1.1.0 [2018-04-12]
 [*] Implement Domain commands, handlers, queries and repositories
 [+] Create ThreeTrees.Tools.Messages.Abstractions project
+[+] Create ThreeTrees.Tools.Messages project
 [*] Update EmployeeController. Use queries and commands instead of DbContext
 
 1.0.7 [2018-04-11]
